// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Regular"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 26,
        "lineHeight": 32,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 26,
        "lineHeight": 32,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 20,
        "lineHeight": 24,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="bluegreyLight"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="blue"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 8`] = `
<Text
  allowFontScaling={true}
  color="bluegreyLight"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 9`] = `
<Text
  allowFontScaling={true}
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  allowFontScaling={true}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 5`] = `
<Text
  allowFontScaling={true}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 6`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 7`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 3`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 4`] = `
<Text
  allowFontScaling={true}
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  allowFontScaling={true}
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#C02927",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  allowFontScaling={true}
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="blue"
  defaultColor="blue"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "textDecorationLine": "underline",
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
        "textDecorationLine": "underline",
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components Monospace Snapshot 1`] = `
<Text
  allowFontScaling={true}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="RobotoMono"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  maxFontSizeMultiplier={1.5}
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Roboto Mono",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;
